css/style.css
/* ... */
.section.hero.resume {
  height: 500px;
  min-height: auto;
}

.section.hero.timelline {
  position: static;
  z-index: -1;
  height: auto;
  min-height: 680px;
}

.section.hero.rentme {
  min-height: 70vh;
  background-color: hsla(0, 0%, 100%, 0);
  background-image: linear-gradient(129deg, rgba(131, 188, 255, 0.8), rgba(164, 148, 254, 0.7) 40%, rgba(162, 151, 254, 0.7) 58%, rgba(199, 87, 253, 0.7));
}

.section.light {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  min-height: 650px;
  padding-top: 20px;
  padding-bottom: 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.section.darker {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  min-height: 450px;
  margin-top: auto;
  margin-bottom: auto;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  grid-auto-columns: 1fr;
  grid-column-gap: 16px;
  grid-row-gap: 16px;
  -ms-grid-columns: 1fr 1fr;
  grid-template-columns: 1fr 1fr;
  -ms-grid-rows: auto auto;
  grid-template-rows: auto auto;
  background-color: #f3f3f3;
  color: #fff;
}

.section.darker.statement {
  min-height: 450px;
  background-color: #f7f7f7;
}

.section.footer {
  left: 0%;
  top: auto;
  right: 0%;
  bottom: auto;
  min-height: auto;
  background-color: #fff;
  background-image: none;
}

.section.timeline {
  position: relative;
  z-index: -3;
  padding-top: 0px;
  padding-bottom: 0px;
}

.section.darker {
  background-color: #292929;
}

.section.light-copy {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: auto;
  min-height: 650px;
  padding-top: 20px;
  padding-bottom: 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
}

.section.dark {
  background-color: #f3f3f3;
}

.section.dark.statement {
  min-height: 450px;
}

.hero-image {
  position: absolute;
  left: auto;
  top: auto;
  right: 0%;
  bottom: auto;
  z-index: 0;
  overflow: visible;
  width: 40%;
  height: 90%;
  margin-top: 0px;
  padding: 20px;
  background-image: url('../images/FullLogo_Transparent_NoBuffer.png');
  background-position: 50% 50%;
  background-size: contain;
  background-repeat: no-repeat;
  opacity: 0.8;
  -webkit-perspective: none;
  perspective: none;
  -webkit-transform: perspective(1000px);
  transform: perspective(1000px);
  background-clip: border-box;
  -webkit-text-fill-color: inherit;
}

.section-banner.b-section {
  background-image: linear-gradient(349deg, #abc1ff 15%, #cc9efe 83%);
  height: auto;
  min-height: 40vh;
  padding-top: 50px;
  padding-bottom: 50px;
  margin: auto;
}


.gallery-grid {
  position: relative;
  display: block;
  width: 90%;
  margin-right: auto;
  margin-bottom: 50px;
  margin-left: auto;
  padding-top: 0px;
  padding-bottom: 0px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  grid-auto-flow: row;
  grid-auto-columns: 1fr;
  grid-column-gap: 30px;
  grid-row-gap: 30px;
  grid-template-areas: ". . ."
    ". . .";
  -ms-grid-columns: 1.5fr 30px 0.75fr 30px 1.5fr;
  grid-template-columns: 1.5fr 0.75fr 1.5fr;
  -ms-grid-rows: auto 30px auto;
  grid-template-rows: auto auto;
  font-family: Montserrat, sans-serif;
}

.gallery-grid.home {
  width: auto;
  max-width: 80%;
  margin-top: auto;
  margin-bottom: auto;
  padding-bottom: 4%;
}

.gallery-description {
  position: absolute;
  left: auto;
  top: auto;
  right: 0%;
  bottom: 0%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  width: 32%;
  height: 60%;
  margin: 0px auto 120px;
  padding-right: 0px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-align: center;
  -webkit-align-items: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 5px;
  background-color: #fff;
  box-shadow: 1px 4px 20px -5px rgba(0, 0, 0, 0.42);
  -o-object-fit: fill;
  object-fit: fill;
}
/* ... */

